@@ -13,7 +13,6 @@ $|=1;
 my $version         = "=V";
 my $kimage          = "=K";
 my $preinst_hook    = '';       #Normally we do not
-my $kernel_arch       = "=B";
 my $package_name    = "linux-image-$version";
 
 #known variables
@@ -39,8 +38,6 @@ if (-r "$CONF_LOC" && -f "$CONF_LOC"  ) {
     close CONF;
   }
 }
-
-$ENV{KERNEL_ARCH}=$kernel_arch if $kernel_arch;
 
 
 # set the env var stem
