@@ -11,7 +11,6 @@ $|=1;
 my $version         = "=V";
 my $kimage          = "=K";
 my $prerm_hook      = '';       #Normally we do not
-my $kernel_arch       = "=B";
 my $package_name    = "linux-image-$version";
 
 #known variables
@@ -42,8 +41,6 @@ if (-r "$CONF_LOC" && -f "$CONF_LOC"  ) {
   }
 }
 
-
-$ENV{KERNEL_ARCH}=$kernel_arch if $kernel_arch;
 
 #check to see if we are trying to remove a running kernel
 # if so we abort right now.
