@@ -12,6 +12,8 @@ linux (3.11~rc5-1~exp1) UNRELEASED; urgency=low
   * [armel] Disable iop32x and ixp4xx flavours (fixes FTBFS)
   * Clean up maintainer scripts and templating system
     - Move all templates under debian/templates
+    - linux-image: Remove undocumented $KERNEL_ARCH variable from hook
+      environment
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 11 Aug 2013 19:34:47 +0200
 
